array.island.Island.scala.error
Erreur de compilation :
Island:5: error: not found: value lenth
  for (i <- 1 to lenth(num)){
                 ^